added docker install notes and neotree vim tip

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,7 @@
-{}
+{
+  "useMarkdownLinks": true,
+  "attachmentFolderPath": "./images",
+  "readableLineLength": false,
+  "strictLineBreaks": true,
+  "useTab": false
+}
